--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
     <head>
         <title>Webpage design</title>
-        <link rel="stylesheet" href="https://github.com/amarshaik012/Cloud/blob/main/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class ="main">
